# soleclaw

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: Commands.md
src/soleclaw/bus/: events.py  queue.py
src/soleclaw/channels/: base.py  cli.py  manager.py  slack.py  telegram.py
src/soleclaw/cli/: commands.py  configure.py
src/soleclaw/config/: schema.py
src/soleclaw/core/: bootstrap.py  bridge.py  context.py  pidfile.py
src/soleclaw/cron/: service.py  store.py  types.py
src/soleclaw/forge/: engine.py  lifecycle.py  validator.py
src/soleclaw/memory/: base.py  local.py  viking.py
src/soleclaw/skills/: loader.py
src/soleclaw/skills/builtin/cron/: SKILL.md
src/soleclaw/skills/builtin/forge/: SKILL.md
src/soleclaw/skills/builtin/memory/: SKILL.md
src/soleclaw/tools/: sdk_tools.py
tests/: test_bootstrap.py  test_bridge.py  test_bus.py  test_channel_manager.py  test_cli_channel.py  test_config.py  test_configure.py  test_context.py  test_cron.py  test_e2e_bootstrap.py  test_e2e_cron.py  test_e2e_forge.py  test_forge.py  test_memory.py  test_pidfile.py  test_sdk_tools.py  test_skills.py  test_slack.py  test_status.py  test_telegram.py  test_tool_library.py
