[project]
name = "soleclaw"
version = "0.1.1"
description = "Self-evolving personal AI assistant"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "httpx>=0.27",
    "claude-agent-sdk>=0.1",
    "typer>=0.12",
    "prompt-toolkit>=3.0",
    "loguru>=0.7",
    "rich>=13.0",
    "python-telegram-bot>=21.0,<22.0",
    "slack-bolt>=1.18.0",
    "aiohttp>=3.9",
]

[project.optional-dependencies]
telegram = ["python-telegram-bot>=21.0"]
slack = ["slack-bolt>=1.18.0"]
viking = ["openviking>=0.1"]
forge = ["aiosqlite>=0.20"]
cron = ["croniter>=2.0"]
all = ["soleclaw[telegram,slack,viking,forge,cron]"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24"]

[project.scripts]
soleclaw = "soleclaw.cli.commands:app"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
